# fastapi_practice

./: pyproject.toml
templates/: index.html
three_letter/: config.py  db.py  main.py  models.py
